# hermetic_cc_toolchain

./: .bazelrc  MODULE.bazel  README.md
.github/workflows/: ci.yaml
ci/: test_example
examples/bzlmod/: .bazelrc  MODULE.bazel
examples/rules_cc/: WORKSPACE
toolchain/private/: cc_toolchains.bzl
