module(
    name = "hermetic_cc_toolchain_bcr_tests",
    version = "0.1.0",
)

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk", "zig_toolchains")

register_toolchains(
    "@zig_toolchains//...",
)

bazel_dep(
    name = "rules_go",
    version = "0.48.0",
    repo_name = "io_bazel_rules_go",
)
